# crewairiskanaalizesystem

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  tmp_ui.html  ui_app.py
bank-statement-mcp/: .env.example  .gitignore  Dockerfile  README.md  deploy-local.ps1  deploy-local.sh  docker-compose.yml  env.example  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  pyproject.toml  server.py
bank-statement-mcp/openapi/: modulbankv1.json
bank-statement-mcp/tests/: __init__.py  test_get_bank_statement.py  test_integration.py
bank-statement-mcp/tools/: __init__.py  get_bank_statement.py  mocks.py  utils.py
config/: nginx.conf
fns-tax-mcp/: .cursorrules  .env.example  .gitignore  CONTAINER_APPS_ENV.md  CONTAINER_APPS_ENV_TABLE.md  DEPLOY.md  Dockerfile  POSTMAN_TESTS.md  PRODUCTION_SERVER_CHECK.md  README.md  api_test_results.json  api_test_results_client.json  build-and-run.ps1  deploy-local.ps1  deploy-local.sh  docker-compose.yml  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  production_test_results.json  production_test_results_client.json  pyproject.toml  pytest.ini  server.py  test_all_23_tools.py  test_all_24_tools.py  test_all_api_prod.py  test_api_all.py  test_api_fastmcp_client.py  test_production_client.py  test_production_server.py  test_tools.py
fns-tax-mcp/.gitverse/workflows/: cloud-ru.yaml
fns-tax-mcp/test/: __init__.py  test_all_tools.py  test_generate_usn.py
fns-tax-mcp/tools/: __init__.py  autocomplete.py  check_account_blocks.py  check_counterparty.py  check_passport.py  check_person_status.py  generate_6ndfl_declaration.py  generate_nds_declaration.py  generate_osno_declaration.py  generate_usn_declaration.py  get_accounting_report.py  get_api_statistics.py  get_company_data.py  get_extract.py  get_fsrar_licenses.py  get_inn_by_passport.py  mocks.py  monitor_companies.py  multcheck_companies.py  multinfo_companies.py  search_companies.py  track_changes.py  utils.py  xml_generator.py
frontend/: jest.config.cjs  package-lock.json  package.json  tailwind.config.js  tsconfig.jest.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  style.css  types.ts
frontend/src/__tests__/: parser.test.ts
frontend/src/components/: ChatMessage.tsx  DataTable.tsx  RiskChart.tsx
kadarbitrmcp/: Dockerfile  README.md  config.py  mcp_instance.py  mcp_remote_get.py  mcp_remote_session_test.py  mcp_remote_test.py  metrics.py  pyproject.toml  server.py  temp_arbitr_prod.py  temp_arbitr_prod_pdf.py
kadarbitrmcp/test/: test_arbitr_api.py
kadarbitrmcp/tools/: __init__.py  arbitr_api.py  arbitr_client.py  arbitr_stubs.py
