[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-trigger"
version = "0.1.0"
description = "Evolution TG Trigger for a2a agents"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "loguru>=0.7.3",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0",
    "httpx>=0.27.2",
    "a2a>=0.0.24",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "telegramify-markdown>=0.4.0",
    "SpeechRecognition>=3.10.4",
    "pydub>=0.25.1",
    "opentelemetry-api>=1.28.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

